# src/main/kotlin/ru/droptableusers/sampleapi/data/models/inout/input/tags/CreateTagsInputModel.kt
@@ -1,0 +1,8 @@
+package ru.droptableusers.sampleapi.data.models.inout.input.tags
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class CreateTagsInputModel(
+    val tagList: List<String>,
+)
