# src/main/kotlin/ru/droptableusers/sampleapi/data/models/inout/input/tags/DeleteTagsInputModel.kt
@@ -3,6 +3,6 @@ package ru.droptableusers.sampleapi.data.models.inout.input.tags
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class CreateTagInputModel(
-    val tagText: String,
+data class DeleteTagsInputModel(
+    val tagIdList: List<Int>,
 )
